// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<h1>
  <div>
    Viewing 
    1
     
    expense
     totalling - 
    $2.35
  </div>
</h1>
`;

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<h1>
  <div>
    Viewing 
    23
     
    expenses
     totalling - 
    $9,847.81
  </div>
</h1>
`;
